# arcaflow-plugin-aws-ec2-control

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  example.yaml  pyproject.toml
.github/workflows/: build.yaml  workflow.yaml
arcaflow_plugin_aws_ec2_control/: ec2_plugin.py
input/: input_force_stop.yaml  input_restart.yaml  input_schema.json  input_start.yaml  input_stop.yaml  input_terminate.yaml
tests/: test_arcaflow_plugin_aws_ec2_control.py  test_ec2_plugin.py
