[tool.poetry]
name = "arcaflow-plugin-aws-ec2-control"
version = "0.1.0"
description = ""
authors = ["Arcalot"]
license = "Apache-2.0+GPL-2.0-only"

packages = [
   { include="ec2_plugin.py", from="./arcaflow_plugin_aws_ec2_control"  },
]

[tool.poetry.dependencies]
python = "^3.9"
arcaflow-plugin-sdk = "^0.10.3"
boto3 = "1.26.*"
moto = "4.1.*"

[tool.poetry.dev-dependencies]
docformatter = "^1.5.0"
autoflake = "^1.7.6"
pydocstyle = "^6.1.1"
black = "^23.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
